# Conventional-Accelerator

./: CMakeLists.txt  README.md
NPU/: IDP_Manager.h  Input_Tracker.h  NPU_controller.h  NZVL.txt  PRE.h  Pixel_Memory.h  SYSTEM.h  ccm_controller.h  input.txt  main.cpp  pixel_allocator.h  tb.h
libs/systemc-2.3.3/lib-linux64/: libsystemc.la
libs/systemc-2.3.3/objdir/: Makefile  config.status  libtool
libs/systemc-2.3.3/objdir/docs/: Makefile
libs/systemc-2.3.3/objdir/examples/: Makefile
libs/systemc-2.3.3/objdir/examples/sysc/: Makefile
libs/systemc-2.3.3/objdir/examples/tlm/: Makefile
libs/systemc-2.3.3/objdir/examples/tlm/common/: Makefile
libs/systemc-2.3.3/objdir/src/: Makefile  systemc.pc  tlm.pc
libs/systemc-2.3.3/objdir/src/.libs/: libsystemc.la
libs/systemc-2.3.3/objdir/src/sysc/: Makefile
libs/systemc-2.3.3/objdir/src/tlm_core/: Makefile
libs/systemc-2.3.3/objdir/src/tlm_utils/: Makefile
src/: CMakeLists.txt  main.cpp
src/CCM/: MAC.h
src/COMMON/: BRAM.h  COMMON.h  Debug.h  SDRAM.h
src/COMMON/SRAM/: SRAM.h  SRAM_TEST.h
src/IDP/: IDPManager.cpp
src/PRE/: SMEncoder.cpp
